--- a/templates/pagina1.html
+++ b/templates/pagina1.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Plantilla para visualizar en fask</h1>
-    <img src="../static/images/gatitos.jpg" alt="">
+    <img src="../static/images/gatito.png" alt="">
 </body>
 </html>
